gpu settings for Apple

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
@@ -29,6 +29,32 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PyTorch version: 1.13.0\n",
+      "Using device: mps\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"PyTorch version: {torch.__version__}\")\n",
+    "\n",
+    "# Check PyTorch has access to MPS (Metal Performance Shader, Apple's GPU architecture)\n",
+    "#print(f\"Is MPS (Metal Performance Shader) built? {torch.backends.mps.is_built()}\")\n",
+    "#print(f\"Is MPS available? {torch.backends.mps.is_available()}\")\n",
+    "\n",
+    "# Set the device      \n",
+    "device = \"mps\" if torch.backends.mps.is_available() else torch.device(\"cuda\") if torch.cuda.is_available() else torch.device('cpu')\n",
+    "print(f\"Using device: {device}\")"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -39,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,17 +75,16 @@
     "        self.data = data\n",
     "        self.choices = choices\n",
     "        self.model = model\n",
-    "        #print(\"ok\")\n",
     "        self.process_sentences()\n",
-    "        #print(\"ok\")\n",
     "        self.tokenizer = AutoTokenizer.from_pretrained(model)\n",
     "        self.sent_encodings, self.word_encodings, self.mask_idxs = self.make_encodings() #store the encodings\n",
     "        self.model = AutoModelForMaskedLM.from_pretrained(model)\n",
     "    \n",
     "    #Function to make predictions and calculate how often the biased words are chosen\n",
     "    def run_model_and_evaluate(self):\n",
-    "        output = self.make_predictions()\n",
-    "        self.bias = self.get_bias(output)#how often do we get the bias\n",
+    "        self.make_predictions()\n",
+    "        #output = self.make_predictions()\n",
+    "        #self.bias = self.get_bias(output) #how often do we get the bias\n",
     "\n",
     "    #Insert the candidates words inside the sentences\n",
     "    def process_sentences(self,s='______'):\n",
@@ -116,11 +141,13 @@
     "                predictions.append(candidate_score)\n",
     "            preds.append(predictions) #store predictions\n",
     "            output.append(np.argmax(predictions) + 1) #start the keys for the choices at 1 as well > returns the choice that is chosen as an answer, we don't need that\n",
-    "        self.data.loc[:,'probabilities'] = preds\n",
-    "        self.data.loc[:,'output'] = output\n",
-    "        preds = [self.mask_filler(sent) for sent in self.data['masked_sentence']]\n",
-    "        self.data.loc[:,'predictions'] = [[p['token_str'].replace(' ','') for p in pred] for pred in preds] \n",
-    "        return output\n",
+    "        #self.data.loc[:,'probabilities'] = preds\n",
+    "        #self.data.loc[:,'output'] = output\n",
+    "        #preds = [self.mask_filler(sent) for sent in self.data['masked_sentence']]\n",
+    "        #self.data.loc[:,'predictions'] = [[p['token_str'].replace(' ','') for p in pred] for pred in preds] \n",
+    "        print(predictions)\n",
+    "        print(output)\n",
+    "        #return output\n",
     "    \n",
     "    #Function to see how often the biased words were chosen.\n",
     "    def get_bias(self,predictions):\n",
@@ -133,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,150 +178,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "application/json": {
-       "ascii": false,
-       "bar_format": null,
-       "colour": null,
-       "elapsed": 0.011042118072509766,
-       "initial": 0,
-       "n": 0,
-       "ncols": null,
-       "nrows": null,
-       "postfix": null,
-       "prefix": "Downloading",
-       "rate": null,
-       "total": 898823,
-       "unit": "B",
-       "unit_divisor": 1000,
-       "unit_scale": true
-      },
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4ea7a81e7ebc4d40a01f56c5f565256b",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading:   0%|          | 0.00/899k [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/json": {
-       "ascii": false,
-       "bar_format": null,
-       "colour": null,
-       "elapsed": 0.008053064346313477,
-       "initial": 0,
-       "n": 0,
-       "ncols": null,
-       "nrows": null,
-       "postfix": null,
-       "prefix": "Downloading",
-       "rate": null,
-       "total": 456318,
-       "unit": "B",
-       "unit_divisor": 1000,
-       "unit_scale": true
-      },
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "deceda374b554ab7ab5c7490ddb07e0d",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading:   0%|          | 0.00/456k [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/json": {
-       "ascii": false,
-       "bar_format": null,
-       "colour": null,
-       "elapsed": 0.0042760372161865234,
-       "initial": 0,
-       "n": 0,
-       "ncols": null,
-       "nrows": null,
-       "postfix": null,
-       "prefix": "Downloading",
-       "rate": null,
-       "total": 1355863,
-       "unit": "B",
-       "unit_divisor": 1000,
-       "unit_scale": true
-      },
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e6b1e9580e814b428ba2819350211537",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading:   0%|          | 0.00/1.36M [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/json": {
-       "ascii": false,
-       "bar_format": null,
-       "colour": null,
-       "elapsed": 0.005908966064453125,
-       "initial": 0,
-       "n": 0,
-       "ncols": null,
-       "nrows": null,
-       "postfix": null,
-       "prefix": "Downloading",
-       "rate": null,
-       "total": 331070498,
-       "unit": "B",
-       "unit_divisor": 1000,
-       "unit_scale": true
-      },
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e7eed14c84b840fdba6a61055eb82f16",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading:   0%|          | 0.00/331M [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "Length of values (1) does not match length of index (19)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[10], line 6\u001b[0m\n\u001b[1;32m      4\u001b[0m templates \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39mread_csv(file_path, sep\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m;\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m      5\u001b[0m evaluator \u001b[39m=\u001b[39m LanguageModelEvaluator(templates\u001b[39m.\u001b[39mcopy(), choices, model_name)\n\u001b[0;32m----> 6\u001b[0m evaluator\u001b[39m.\u001b[39;49mrun_model_and_evaluate()\n",
-      "Cell \u001b[0;32mIn[9], line 16\u001b[0m, in \u001b[0;36mLanguageModelEvaluator.run_model_and_evaluate\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mrun_model_and_evaluate\u001b[39m(\u001b[39mself\u001b[39m):\n\u001b[0;32m---> 16\u001b[0m     output \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mmake_predictions()\n\u001b[1;32m     17\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mbias \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mget_bias(output)\n",
-      "Cell \u001b[0;32mIn[9], line 74\u001b[0m, in \u001b[0;36mLanguageModelEvaluator.make_predictions\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m     72\u001b[0m     preds\u001b[39m.\u001b[39mappend(predictions) \u001b[39m#store predictions\u001b[39;00m\n\u001b[1;32m     73\u001b[0m     output\u001b[39m.\u001b[39mappend(np\u001b[39m.\u001b[39margmax(predictions) \u001b[39m+\u001b[39m \u001b[39m1\u001b[39m) \u001b[39m#start the keys for the choices at 1 as well > returns the choice that is chosen as an answer, we don't need that\u001b[39;00m\n\u001b[0;32m---> 74\u001b[0m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mdata\u001b[39m.\u001b[39;49mloc[:,\u001b[39m'\u001b[39;49m\u001b[39mprobabilities\u001b[39;49m\u001b[39m'\u001b[39;49m] \u001b[39m=\u001b[39m preds\n\u001b[1;32m     75\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdata\u001b[39m.\u001b[39mloc[:,\u001b[39m'\u001b[39m\u001b[39moutput\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m=\u001b[39m output\n\u001b[1;32m     76\u001b[0m preds \u001b[39m=\u001b[39m [\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mmask_filler(sent) \u001b[39mfor\u001b[39;00m sent \u001b[39min\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdata[\u001b[39m'\u001b[39m\u001b[39mmasked_sentence\u001b[39m\u001b[39m'\u001b[39m]]\n",
-      "File \u001b[0;32m~/opt/miniconda3/lib/python3.9/site-packages/pandas/core/indexing.py:716\u001b[0m, in \u001b[0;36m_LocationIndexer.__setitem__\u001b[0;34m(self, key, value)\u001b[0m\n\u001b[1;32m    713\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_has_valid_setitem_indexer(key)\n\u001b[1;32m    715\u001b[0m iloc \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mname \u001b[39m==\u001b[39m \u001b[39m\"\u001b[39m\u001b[39miloc\u001b[39m\u001b[39m\"\u001b[39m \u001b[39melse\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mobj\u001b[39m.\u001b[39miloc\n\u001b[0;32m--> 716\u001b[0m iloc\u001b[39m.\u001b[39;49m_setitem_with_indexer(indexer, value, \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mname)\n",
-      "File \u001b[0;32m~/opt/miniconda3/lib/python3.9/site-packages/pandas/core/indexing.py:1625\u001b[0m, in \u001b[0;36m_iLocIndexer._setitem_with_indexer\u001b[0;34m(self, indexer, value, name)\u001b[0m\n\u001b[1;32m   1622\u001b[0m \u001b[39m# add a new item with the dtype setup\u001b[39;00m\n\u001b[1;32m   1623\u001b[0m \u001b[39mif\u001b[39;00m com\u001b[39m.\u001b[39mis_null_slice(indexer[\u001b[39m0\u001b[39m]):\n\u001b[1;32m   1624\u001b[0m     \u001b[39m# We are setting an entire column\u001b[39;00m\n\u001b[0;32m-> 1625\u001b[0m     \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mobj[key] \u001b[39m=\u001b[39m value\n\u001b[1;32m   1626\u001b[0m     \u001b[39mreturn\u001b[39;00m\n\u001b[1;32m   1627\u001b[0m \u001b[39melif\u001b[39;00m is_array_like(value):\n\u001b[1;32m   1628\u001b[0m     \u001b[39m# GH#42099\u001b[39;00m\n",
-      "File \u001b[0;32m~/opt/miniconda3/lib/python3.9/site-packages/pandas/core/frame.py:3655\u001b[0m, in \u001b[0;36mDataFrame.__setitem__\u001b[0;34m(self, key, value)\u001b[0m\n\u001b[1;32m   3652\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_setitem_array([key], value)\n\u001b[1;32m   3653\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m   3654\u001b[0m     \u001b[39m# set column\u001b[39;00m\n\u001b[0;32m-> 3655\u001b[0m     \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_set_item(key, value)\n",
-      "File \u001b[0;32m~/opt/miniconda3/lib/python3.9/site-packages/pandas/core/frame.py:3832\u001b[0m, in \u001b[0;36mDataFrame._set_item\u001b[0;34m(self, key, value)\u001b[0m\n\u001b[1;32m   3822\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m_set_item\u001b[39m(\u001b[39mself\u001b[39m, key, value) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m \u001b[39mNone\u001b[39;00m:\n\u001b[1;32m   3823\u001b[0m     \u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m   3824\u001b[0m \u001b[39m    Add series to DataFrame in specified column.\u001b[39;00m\n\u001b[1;32m   3825\u001b[0m \n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m   3830\u001b[0m \u001b[39m    ensure homogeneity.\u001b[39;00m\n\u001b[1;32m   3831\u001b[0m \u001b[39m    \"\"\"\u001b[39;00m\n\u001b[0;32m-> 3832\u001b[0m     value \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_sanitize_column(value)\n\u001b[1;32m   3834\u001b[0m     \u001b[39mif\u001b[39;00m (\n\u001b[1;32m   3835\u001b[0m         key \u001b[39min\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mcolumns\n\u001b[1;32m   3836\u001b[0m         \u001b[39mand\u001b[39;00m value\u001b[39m.\u001b[39mndim \u001b[39m==\u001b[39m \u001b[39m1\u001b[39m\n\u001b[1;32m   3837\u001b[0m         \u001b[39mand\u001b[39;00m \u001b[39mnot\u001b[39;00m is_extension_array_dtype(value)\n\u001b[1;32m   3838\u001b[0m     ):\n\u001b[1;32m   3839\u001b[0m         \u001b[39m# broadcast across multiple columns if necessary\u001b[39;00m\n\u001b[1;32m   3840\u001b[0m         \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mcolumns\u001b[39m.\u001b[39mis_unique \u001b[39mor\u001b[39;00m \u001b[39misinstance\u001b[39m(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mcolumns, MultiIndex):\n",
-      "File \u001b[0;32m~/opt/miniconda3/lib/python3.9/site-packages/pandas/core/frame.py:4535\u001b[0m, in \u001b[0;36mDataFrame._sanitize_column\u001b[0;34m(self, value)\u001b[0m\n\u001b[1;32m   4532\u001b[0m     \u001b[39mreturn\u001b[39;00m _reindex_for_setitem(value, \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mindex)\n\u001b[1;32m   4534\u001b[0m \u001b[39mif\u001b[39;00m is_list_like(value):\n\u001b[0;32m-> 4535\u001b[0m     com\u001b[39m.\u001b[39;49mrequire_length_match(value, \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mindex)\n\u001b[1;32m   4536\u001b[0m \u001b[39mreturn\u001b[39;00m sanitize_array(value, \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mindex, copy\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m, allow_2d\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m)\n",
-      "File \u001b[0;32m~/opt/miniconda3/lib/python3.9/site-packages/pandas/core/common.py:557\u001b[0m, in \u001b[0;36mrequire_length_match\u001b[0;34m(data, index)\u001b[0m\n\u001b[1;32m    553\u001b[0m \u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m    554\u001b[0m \u001b[39mCheck the length of data matches the length of the index.\u001b[39;00m\n\u001b[1;32m    555\u001b[0m \u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m    556\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mlen\u001b[39m(data) \u001b[39m!=\u001b[39m \u001b[39mlen\u001b[39m(index):\n\u001b[0;32m--> 557\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\n\u001b[1;32m    558\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mLength of values \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m    559\u001b[0m         \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m(\u001b[39m\u001b[39m{\u001b[39;00m\u001b[39mlen\u001b[39m(data)\u001b[39m}\u001b[39;00m\u001b[39m) \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m    560\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mdoes not match length of index \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m    561\u001b[0m         \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m(\u001b[39m\u001b[39m{\u001b[39;00m\u001b[39mlen\u001b[39m(index)\u001b[39m}\u001b[39;00m\u001b[39m)\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m    562\u001b[0m     )\n",
-      "\u001b[0;31mValueError\u001b[0m: Length of values (1) does not match length of index (19)"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5.907992839813232, 5.427173614501953, 3.3854613304138184]\n",
+      "[1]\n"
      ]
     }
    ],
@@ -304,7 +196,7 @@
     "model_name = 'distilroberta-base'\n",
     "templates = pd.read_csv(file_path, sep=\";\")\n",
     "evaluator = LanguageModelEvaluator(templates.copy(), choices, model_name)\n",
-    "evaluator.run_model_and_evaluate()"
+    "evaluator.run_model_and_evaluate()\n"
    ]
   }
  ],
