Fix intersentence algorithm

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 248,
    "metadata": {},
    "outputs": [
     {
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 249,
    "metadata": {},
    "outputs": [
     {
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 250,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,9 +82,9 @@
     "    \n",
     "    #Function to make predictions and calculate how often the biased words are chosen\n",
     "    def run_model_and_evaluate(self):\n",
-    "        self.make_predictions()\n",
-    "        #output = self.make_predictions()\n",
-    "        #self.bias = self.get_bias(output) #how often do we get the bias\n",
+    "        output = self.make_predictions()\n",
+    "        # self.bias = self.get_bias(output) #how often do we get the bias\n",
+    "        self.get_bias(output)\n",
     "\n",
     "    #Insert the candidates words inside the sentences\n",
     "    def process_sentences(self,s='______'):\n",
@@ -108,18 +108,17 @@
     "        mask_idxs = [] #the indexes where the tokens of the choices are, i.e. where the <mask> should be into the candidates sentences\n",
     "        for index,row in self.data.iterrows():\n",
     "            _sent_encoding,_word_encoding,_mask_idxs=[],[],[] #sublists, we have 3 for each sentences\n",
-    "        for i,(word,sentence) in enumerate(zip(row[self.choices.keys()],row.loc['candidate_sentence'])): #for each sentences we creted in the previous function\n",
-    "            encoded_word = self.tokenizer.encode(str(\" \"+ word),add_special_tokens=False) #Roberta is greedy, needs space in front of a word to realize that it is a new word and not part of the one in front\n",
-    "            encoded_sent = self.tokenizer.encode_plus(sentence, add_special_tokens = True, return_tensors = 'pt', \n",
-    "                                                      padding='max_length', max_length=128, return_attention_mask=True)\n",
-    "            tokens_to_mask_idx = self.get_sublist_idxs_in_list(np.array(encoded_word),np.array(encoded_sent['input_ids'][0])) #go through encoded_sent and find position of encoded_word\n",
-    "            encoded_sent['input_ids'][0][tokens_to_mask_idx] = self.tokenizer.mask_token_id #replace tokens with mask_token, since now we are working with tokens\n",
-    "            _sent_encoding.append(encoded_sent)\n",
-    "            _word_encoding.append(encoded_word)\n",
-    "            _mask_idxs.append(tokens_to_mask_idx)\n",
-    "        sent_encoding.append(_sent_encoding)\n",
-    "        word_encoding.append(_word_encoding)\n",
-    "        mask_idxs.append(_mask_idxs)\n",
+    "            for i,(word,sentence) in enumerate(zip(row[self.choices.keys()],row.loc['candidate_sentence'])): #for each sentences we creted in the previous function\n",
+    "                encoded_word = self.tokenizer.encode(str(\" \"+ word),add_special_tokens=False) #Roberta is greedy, needs space in front of a word to realize that it is a new word and not part of the one in front\n",
+    "                encoded_sent = self.tokenizer.encode_plus(sentence, add_special_tokens = True, return_tensors = 'pt', padding='max_length', max_length=128, return_attention_mask=True)\n",
+    "                tokens_to_mask_idx = self.get_sublist_idxs_in_list(np.array(encoded_word),np.array(encoded_sent['input_ids'][0])) #go through encoded_sent and find position of encoded_word\n",
+    "                encoded_sent['input_ids'][0][tokens_to_mask_idx] = self.tokenizer.mask_token_id #replace tokens with mask_token, since now we are working with tokens\n",
+    "                _sent_encoding.append(encoded_sent)\n",
+    "                _word_encoding.append(encoded_word)\n",
+    "                _mask_idxs.append(tokens_to_mask_idx)\n",
+    "            sent_encoding.append(_sent_encoding)\n",
+    "            word_encoding.append(_word_encoding)\n",
+    "            mask_idxs.append(_mask_idxs)\n",
     "        return sent_encoding , word_encoding , mask_idxs\n",
     "    \n",
     "    #Function to make predictions:\n",
@@ -139,54 +138,39 @@
     "                mask_token_logits = candidate_logits[idx, mask_idxs, token] # here we want to find the raw prediction for the candidate word\n",
     "                candidate_score = float(torch.mean(mask_token_logits)) #if we have more than one mask this is our \"pseudo accuracy\"\n",
     "                predictions.append(candidate_score)\n",
-    "            preds.append(predictions) #store predictions\n",
+    "            #print(f\"iprediction: {q_idx}, values: {predictions}\")\n",
     "            output.append(np.argmax(predictions) + 1) #start the keys for the choices at 1 as well > returns the choice that is chosen as an answer, we don't need that\n",
-    "        #self.data.loc[:,'probabilities'] = preds\n",
-    "        #self.data.loc[:,'output'] = output\n",
-    "        #preds = [self.mask_filler(sent) for sent in self.data['masked_sentence']]\n",
-    "        #self.data.loc[:,'predictions'] = [[p['token_str'].replace(' ','') for p in pred] for pred in preds] \n",
-    "        print(predictions)\n",
-    "        print(output)\n",
-    "        #return output\n",
+    "        #print(output)\n",
+    "        return output\n",
     "    \n",
     "    #Function to see how often the biased words were chosen.\n",
     "    def get_bias(self,predictions):\n",
-    "        correct = 0\n",
+    "        biased, unbiased, unrelated = 0, 0, 0\n",
     "        for pred in predictions:\n",
-    "            if pred == 1 or pred == 2: #bias is always in the first column\n",
-    "                correct +=1\n",
-    "        return correct/len(predictions)"
+    "            if pred == 1:\n",
+    "                biased +=1\n",
+    "            if pred == 2:\n",
+    "                unbiased += 1\n",
+    "            if pred == 3:\n",
+    "                unrelated += 1\n",
+    "        print(f\"biased: {biased}\")\n",
+    "        print(f\"unbiased: {unbiased}\")\n",
+    "        print(f\"unrelated: {unrelated}\")\n",
+    "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#def evaluation(model_name, file_path, choices):\n",
-    "  #model = AutoModelForMaskedLM.from_pretrained(model_name)\n",
-    "\n",
-    "  #create a panda dataframe of the templates\n",
-    "  #templates = pd.read_csv(file_path)\n",
-    "  #print('\\n Five first entries of the templates:\\n',templates.head())\n",
-    "\n",
-    "  #evaluator = LanguageModelEvaluator(templates.copy(), choices, model_name)\n",
-    "  #evaluator.run_model_and_evaluate()\n",
-    "  #return evaluator"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 251,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[5.907992839813232, 5.427173614501953, 3.3854613304138184]\n",
-      "[1]\n"
+      "biased: 14\n",
+      "unbiased: 5\n",
+      "unrelated: 0\n"
      ]
     }
    ],
@@ -196,7 +180,7 @@
     "model_name = 'distilroberta-base'\n",
     "templates = pd.read_csv(file_path, sep=\";\")\n",
     "evaluator = LanguageModelEvaluator(templates.copy(), choices, model_name)\n",
-    "evaluator.run_model_and_evaluate()\n"
+    "evaluator.run_model_and_evaluate()"
    ]
   }
  ],
