fix Intrasentence and samples adjustment

--- a/Intrasentence.ipynb
+++ b/Intrasentence.ipynb
@@ -2,23 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: torch in /Users/mae/opt/miniconda3/lib/python3.9/site-packages (1.13.0)\n",
-      "Requirement already satisfied: typing_extensions in /Users/mae/opt/miniconda3/lib/python3.9/site-packages (from torch) (4.3.0)\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "#!pip install transformers\n",
+    "#%pip install transformers\n",
     "#!pip install pandas\n",
-    "%pip install torch\n",
+    "#%pip install torch\n",
     "\n",
     "import pandas as pd\n",
     "import os\n",
@@ -30,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 249,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -65,11 +55,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 250,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class LanguageModelEvaluator():\n",
+    "class IntrasentenceEvaluator():\n",
     "    \n",
     "    def __init__(self, data, choices, model):\n",
     "        self.data = data\n",
@@ -161,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 251,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -176,10 +166,10 @@
    ],
    "source": [
     "choices = {'bias':1, 'unbiased':2,'unrelated':3} \n",
-    "file_path = 'testing_data.csv' #\"drive/MyDrive/Final_templates.csv\"#\"drive/MyDrive/New_templates.csv\"\n",
+    "file_path = 'testing_data_intra.csv' #\"drive/MyDrive/Final_templates.csv\"#\"drive/MyDrive/New_templates.csv\"\n",
     "model_name = 'distilroberta-base'\n",
     "templates = pd.read_csv(file_path, sep=\";\")\n",
-    "evaluator = LanguageModelEvaluator(templates.copy(), choices, model_name)\n",
+    "evaluator = IntrasentenceEvaluator(templates.copy(), choices, model_name)\n",
     "evaluator.run_model_and_evaluate()"
    ]
   }
