--- a/Intersentece.ipynb
+++ b/Intersentece.ipynb
@@ -2,27 +2,83 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 70,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: transformers in /Users/mae/opt/miniconda3/lib/python3.9/site-packages (4.24.0)\n",
+      "Requirement already satisfied: filelock in /Users/mae/.local/lib/python3.9/site-packages (from transformers) (3.8.0)\n",
+      "Requirement already satisfied: numpy>=1.17 in /Users/mae/opt/miniconda3/lib/python3.9/site-packages (from transformers) (1.23.4)\n",
+      "Requirement already satisfied: pyyaml>=5.1 in /Users/mae/opt/miniconda3/lib/python3.9/site-packages (from transformers) (6.0)\n",
+      "Requirement already satisfied: packaging>=20.0 in /Users/mae/opt/miniconda3/lib/python3.9/site-packages (from transformers) (21.3)\n",
+      "Requirement already satisfied: requests in /Users/mae/opt/miniconda3/lib/python3.9/site-packages (from transformers) (2.27.1)\n",
+      "Requirement already satisfied: tokenizers!=0.11.3,<0.14,>=0.11.1 in /Users/mae/opt/miniconda3/lib/python3.9/site-packages (from transformers) (0.13.2)\n",
+      "Requirement already satisfied: huggingface-hub<1.0,>=0.10.0 in /Users/mae/opt/miniconda3/lib/python3.9/site-packages (from transformers) (0.11.0)\n",
+      "Requirement already satisfied: regex!=2019.12.17 in /Users/mae/opt/miniconda3/lib/python3.9/site-packages (from transformers) (2022.10.31)\n",
+      "Requirement already satisfied: tqdm>=4.27 in /Users/mae/opt/miniconda3/lib/python3.9/site-packages (from transformers) (4.64.0)\n",
+      "Requirement already satisfied: typing-extensions>=3.7.4.3 in /Users/mae/opt/miniconda3/lib/python3.9/site-packages (from huggingface-hub<1.0,>=0.10.0->transformers) (4.3.0)\n",
+      "Requirement already satisfied: pyparsing!=3.0.5,>=2.0.2 in /Users/mae/opt/miniconda3/lib/python3.9/site-packages (from packaging>=20.0->transformers) (3.0.9)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in /Users/mae/opt/miniconda3/lib/python3.9/site-packages (from requests->transformers) (3.3)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in /Users/mae/opt/miniconda3/lib/python3.9/site-packages (from requests->transformers) (2022.12.7)\n",
+      "Requirement already satisfied: charset-normalizer~=2.0.0 in /Users/mae/opt/miniconda3/lib/python3.9/site-packages (from requests->transformers) (2.0.4)\n",
+      "Requirement already satisfied: urllib3<1.27,>=1.21.1 in /Users/mae/opt/miniconda3/lib/python3.9/site-packages (from requests->transformers) (1.26.9)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n",
+      "Requirement already satisfied: pandas in /Users/mae/opt/miniconda3/lib/python3.9/site-packages (1.5.2)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.1 in /Users/mae/opt/miniconda3/lib/python3.9/site-packages (from pandas) (2.8.2)\n",
+      "Requirement already satisfied: numpy>=1.20.3 in /Users/mae/opt/miniconda3/lib/python3.9/site-packages (from pandas) (1.23.4)\n",
+      "Requirement already satisfied: pytz>=2020.1 in /Users/mae/opt/miniconda3/lib/python3.9/site-packages (from pandas) (2022.6)\n",
+      "Requirement already satisfied: six>=1.5 in /Users/mae/opt/miniconda3/lib/python3.9/site-packages (from python-dateutil>=2.8.1->pandas) (1.16.0)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n",
+      "Requirement already satisfied: torch in /Users/mae/opt/miniconda3/lib/python3.9/site-packages (1.13.0)\n",
+      "Requirement already satisfied: typing_extensions in /Users/mae/opt/miniconda3/lib/python3.9/site-packages (from torch) (4.3.0)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n",
+      "Requirement already satisfied: torchvision in /Users/mae/opt/miniconda3/lib/python3.9/site-packages (0.14.0)\n",
+      "Requirement already satisfied: typing_extensions in /Users/mae/opt/miniconda3/lib/python3.9/site-packages (from torchvision) (4.3.0)\n",
+      "Requirement already satisfied: numpy in /Users/mae/opt/miniconda3/lib/python3.9/site-packages (from torchvision) (1.23.4)\n",
+      "Requirement already satisfied: requests in /Users/mae/opt/miniconda3/lib/python3.9/site-packages (from torchvision) (2.27.1)\n",
+      "Requirement already satisfied: torch in /Users/mae/opt/miniconda3/lib/python3.9/site-packages (from torchvision) (1.13.0)\n",
+      "Requirement already satisfied: pillow!=8.3.*,>=5.3.0 in /Users/mae/opt/miniconda3/lib/python3.9/site-packages (from torchvision) (9.2.0)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in /Users/mae/opt/miniconda3/lib/python3.9/site-packages (from requests->torchvision) (2022.12.7)\n",
+      "Requirement already satisfied: urllib3<1.27,>=1.21.1 in /Users/mae/opt/miniconda3/lib/python3.9/site-packages (from requests->torchvision) (1.26.9)\n",
+      "Requirement already satisfied: charset-normalizer~=2.0.0 in /Users/mae/opt/miniconda3/lib/python3.9/site-packages (from requests->torchvision) (2.0.4)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in /Users/mae/opt/miniconda3/lib/python3.9/site-packages (from requests->torchvision) (3.3)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
    "source": [
-    "#%pip install transformers\n",
-    "#!pip install pandas\n",
-    "#%pip install torch\n",
+    "%pip install transformers\n",
+    "%pip install pandas\n",
+    "%pip install torch\n",
+    "%pip install torchvision\n",
     "\n",
     "import pandas as pd\n",
     "import os\n",
     "import torch\n",
-    "from transformers import AutoTokenizer, AutoModelForMaskedLM\n",
+    "from transformers import BertTokenizer, BertForNextSentencePrediction\n",
     "import numpy as np\n",
-    "import re"
+    "import re\n",
+    "from torch.nn.functional import softmax\n",
+    "import torch"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 71,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PyTorch version: 1.13.0\n",
+      "Using device: mps\n"
+     ]
+    }
+   ],
    "source": [
     "print(f\"PyTorch version: {torch.__version__}\")\n",
     "\n",
@@ -46,26 +102,111 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class IntersentenceEvaluator():\n",
-    "    "
+    "# class IntersentenceEvaluator():\n",
+    "#     def __init__(self, data, choices, model):\n",
+    "#         self.data = data\n",
+    "#         self.choices = choices\n",
+    "#         self.model = model\n",
+    "#         self.process_sentences()\n",
+    "#         self.tokenizer = AutoTokenizer.from_pretrained(model)\n",
+    "#         self.sent_encodings, self.word_encodings, self.mask_idxs = self.make_encodings() #store the encodings\n",
+    "#         self.model = AutoModelForMaskedLM.from_pretrained(model)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
     "choices = {'bias':1, 'unbiased':2,'unrelated':3} \n",
-    "file_path = 'testing_data_inter.csv' #\"drive/MyDrive/Final_templates.csv\"#\"drive/MyDrive/New_templates.csv\"\n",
+    "file_path = 'male_refugee_inter.csv' #\"drive/MyDrive/Final_templates.csv\"#\"drive/MyDrive/New_templates.csv\"\n",
     "model_name = 'distilroberta-base'\n",
     "templates = pd.read_csv(file_path, sep=\";\")\n",
     "#evaluator = IntersentenceEvaluator(templates.copy(), choices, model_name)\n",
     "#evaluator.run_model_and_evaluate()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Some weights of the model checkpoint at bert-base-uncased were not used when initializing BertForNextSentencePrediction: ['cls.predictions.transform.dense.weight', 'cls.predictions.transform.LayerNorm.bias', 'cls.predictions.transform.LayerNorm.weight', 'cls.predictions.bias', 'cls.predictions.decoder.weight', 'cls.predictions.transform.dense.bias']\n",
+      "- This IS expected if you are initializing BertForNextSentencePrediction from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
+      "- This IS NOT expected if you are initializing BertForNextSentencePrediction from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n"
+     ]
+    }
+   ],
+   "source": [
+    "model_name = 'distilroberta-base'\n",
+    "\n",
+    "tokenizer = BertTokenizer.from_pretrained('bert-base-uncased')\n",
+    "model = BertForNextSentencePrediction.from_pretrained('bert-base-uncased')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/mae/opt/miniconda3/lib/python3.9/site-packages/transformers/models/bert/modeling_bert.py:1457: FutureWarning: The `next_sentence_label` argument is deprecated and will be removed in a future version, use `labels` instead.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "logits\n"
+     ]
+    }
+   ],
+   "source": [
+    "first_sent = \"Modern pizza was invented in Naples, and the dish and its variants have since become popular in many countries.\"\n",
+    "next_sent = \"It has become one of the most popular foods in the world\"\n",
+    "\n",
+    "encoding = tokenizer(first_sent, next_sent, return_tensors='pt', max_length=512, truncation = True, padding = 'max_length')\n",
+    "\n",
+    "loss, logits = model(**encoding, next_sentence_label=torch.LongTensor([1]))\n",
+    "\n",
+    "print(logits)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'str' object has no attribute 'softmax'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[76], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39m#convert logit to probabilities \u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m probs \u001b[39m=\u001b[39m softmax(logits, dim\u001b[39m=\u001b[39;49m\u001b[39m1\u001b[39;49m)\n\u001b[1;32m      3\u001b[0m probs\n",
+      "File \u001b[0;32m~/opt/miniconda3/lib/python3.9/site-packages/torch/nn/functional.py:1841\u001b[0m, in \u001b[0;36msoftmax\u001b[0;34m(input, dim, _stacklevel, dtype)\u001b[0m\n\u001b[1;32m   1839\u001b[0m     dim \u001b[39m=\u001b[39m _get_softmax_dim(\u001b[39m\"\u001b[39m\u001b[39msoftmax\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39minput\u001b[39m\u001b[39m.\u001b[39mdim(), _stacklevel)\n\u001b[1;32m   1840\u001b[0m \u001b[39mif\u001b[39;00m dtype \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[0;32m-> 1841\u001b[0m     ret \u001b[39m=\u001b[39m \u001b[39minput\u001b[39;49m\u001b[39m.\u001b[39;49msoftmax(dim)\n\u001b[1;32m   1842\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m   1843\u001b[0m     ret \u001b[39m=\u001b[39m \u001b[39minput\u001b[39m\u001b[39m.\u001b[39msoftmax(dim, dtype\u001b[39m=\u001b[39mdtype)\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'str' object has no attribute 'softmax'"
+     ]
+    }
+   ],
+   "source": [
+    "#convert logit to probabilities \n",
+    "probs = softmax(logits, dim=1)\n",
+    "probs"
    ]
   }
  ],
