--- a/Intrasentence.ipynb
+++ b/Intrasentence.ipynb
@@ -116,7 +116,6 @@
     "    # We also see which words the mask filler, i.e. our model, would choose itself for the masked token.\n",
     "    def make_predictions(self):\n",
     "        output = [] #we want what option with highest probability has been chosen\n",
-    "        preds = []\n",
     "        for q_idx, (w, s, m) in enumerate(zip(self.word_encodings, self.sent_encodings, self.mask_idxs)):\n",
     "            predictions =[]\n",
     "            candidate_input_ids = torch.stack([inp_ids['input_ids'].squeeze(0) for inp_ids in s]) #we create batch so instead do precition one by one, the model can predict the whole batch, we create a batch for each sentence \n",
@@ -190,7 +189,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.12 (main, Apr  5 2022, 01:52:34) \n[Clang 12.0.0 ]"
   },
   "orig_nbformat": 4,
   "vscode": {
