--- a/Intersentece.ipynb
+++ b/Intersentece.ipynb
@@ -2,63 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 362,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: transformers in /Users/mae/opt/miniconda3/lib/python3.9/site-packages (4.24.0)\n",
-      "Requirement already satisfied: filelock in /Users/mae/.local/lib/python3.9/site-packages (from transformers) (3.8.0)\n",
-      "Requirement already satisfied: numpy>=1.17 in /Users/mae/opt/miniconda3/lib/python3.9/site-packages (from transformers) (1.23.4)\n",
-      "Requirement already satisfied: pyyaml>=5.1 in /Users/mae/opt/miniconda3/lib/python3.9/site-packages (from transformers) (6.0)\n",
-      "Requirement already satisfied: packaging>=20.0 in /Users/mae/opt/miniconda3/lib/python3.9/site-packages (from transformers) (21.3)\n",
-      "Requirement already satisfied: requests in /Users/mae/opt/miniconda3/lib/python3.9/site-packages (from transformers) (2.27.1)\n",
-      "Requirement already satisfied: tokenizers!=0.11.3,<0.14,>=0.11.1 in /Users/mae/opt/miniconda3/lib/python3.9/site-packages (from transformers) (0.13.2)\n",
-      "Requirement already satisfied: huggingface-hub<1.0,>=0.10.0 in /Users/mae/opt/miniconda3/lib/python3.9/site-packages (from transformers) (0.11.0)\n",
-      "Requirement already satisfied: regex!=2019.12.17 in /Users/mae/opt/miniconda3/lib/python3.9/site-packages (from transformers) (2022.10.31)\n",
-      "Requirement already satisfied: tqdm>=4.27 in /Users/mae/opt/miniconda3/lib/python3.9/site-packages (from transformers) (4.64.0)\n",
-      "Requirement already satisfied: typing-extensions>=3.7.4.3 in /Users/mae/opt/miniconda3/lib/python3.9/site-packages (from huggingface-hub<1.0,>=0.10.0->transformers) (4.3.0)\n",
-      "Requirement already satisfied: pyparsing!=3.0.5,>=2.0.2 in /Users/mae/opt/miniconda3/lib/python3.9/site-packages (from packaging>=20.0->transformers) (3.0.9)\n",
-      "Requirement already satisfied: idna<4,>=2.5 in /Users/mae/opt/miniconda3/lib/python3.9/site-packages (from requests->transformers) (3.3)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in /Users/mae/opt/miniconda3/lib/python3.9/site-packages (from requests->transformers) (2022.12.7)\n",
-      "Requirement already satisfied: charset-normalizer~=2.0.0 in /Users/mae/opt/miniconda3/lib/python3.9/site-packages (from requests->transformers) (2.0.4)\n",
-      "Requirement already satisfied: urllib3<1.27,>=1.21.1 in /Users/mae/opt/miniconda3/lib/python3.9/site-packages (from requests->transformers) (1.26.9)\n",
-      "Note: you may need to restart the kernel to use updated packages.\n",
-      "Requirement already satisfied: pandas in /Users/mae/opt/miniconda3/lib/python3.9/site-packages (1.5.2)\n",
-      "Requirement already satisfied: python-dateutil>=2.8.1 in /Users/mae/opt/miniconda3/lib/python3.9/site-packages (from pandas) (2.8.2)\n",
-      "Requirement already satisfied: numpy>=1.20.3 in /Users/mae/opt/miniconda3/lib/python3.9/site-packages (from pandas) (1.23.4)\n",
-      "Requirement already satisfied: pytz>=2020.1 in /Users/mae/opt/miniconda3/lib/python3.9/site-packages (from pandas) (2022.6)\n",
-      "Requirement already satisfied: six>=1.5 in /Users/mae/opt/miniconda3/lib/python3.9/site-packages (from python-dateutil>=2.8.1->pandas) (1.16.0)\n",
-      "Note: you may need to restart the kernel to use updated packages.\n",
-      "Requirement already satisfied: torch in /Users/mae/opt/miniconda3/lib/python3.9/site-packages (1.13.0)\n",
-      "Requirement already satisfied: typing_extensions in /Users/mae/opt/miniconda3/lib/python3.9/site-packages (from torch) (4.3.0)\n",
-      "Note: you may need to restart the kernel to use updated packages.\n",
-      "Requirement already satisfied: torchvision in /Users/mae/opt/miniconda3/lib/python3.9/site-packages (0.14.0)\n",
-      "Requirement already satisfied: typing_extensions in /Users/mae/opt/miniconda3/lib/python3.9/site-packages (from torchvision) (4.3.0)\n",
-      "Requirement already satisfied: numpy in /Users/mae/opt/miniconda3/lib/python3.9/site-packages (from torchvision) (1.23.4)\n",
-      "Requirement already satisfied: requests in /Users/mae/opt/miniconda3/lib/python3.9/site-packages (from torchvision) (2.27.1)\n",
-      "Requirement already satisfied: torch in /Users/mae/opt/miniconda3/lib/python3.9/site-packages (from torchvision) (1.13.0)\n",
-      "Requirement already satisfied: pillow!=8.3.*,>=5.3.0 in /Users/mae/opt/miniconda3/lib/python3.9/site-packages (from torchvision) (9.2.0)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in /Users/mae/opt/miniconda3/lib/python3.9/site-packages (from requests->torchvision) (2022.12.7)\n",
-      "Requirement already satisfied: urllib3<1.27,>=1.21.1 in /Users/mae/opt/miniconda3/lib/python3.9/site-packages (from requests->torchvision) (1.26.9)\n",
-      "Requirement already satisfied: charset-normalizer~=2.0.0 in /Users/mae/opt/miniconda3/lib/python3.9/site-packages (from requests->torchvision) (2.0.4)\n",
-      "Requirement already satisfied: idna<4,>=2.5 in /Users/mae/opt/miniconda3/lib/python3.9/site-packages (from requests->torchvision) (3.3)\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "%pip install transformers\n",
-    "%pip install pandas\n",
-    "%pip install torch\n",
-    "%pip install torchvision\n",
+    "#%pip install transformers\n",
+    "#%pip install pandas\n",
+    "#%pip install torch\n",
+    "#%pip install torchvision\n",
     "\n",
     "import pandas as pd\n",
     "import os\n",
-    "import torch\n",
     "from transformers import BertTokenizer, BertForNextSentencePrediction\n",
+    "import torch\n",
     "import numpy as np\n",
     "import re\n",
     "from torch.nn.functional import softmax\n",
@@ -66,8 +22,16 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Check the device CPU"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 363,
    "metadata": {},
    "outputs": [
     {
@@ -96,117 +60,155 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Model 1: https://huggingface.co/roberta-base\n",
-    "Model 2: https://huggingface.co/vinai/bertweet-base"
+    "The following is a plain example of how Next Sentence Prediction works, just comment/uncomment next_sentence and check the results"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# class IntersentenceEvaluator():\n",
-    "#     def __init__(self, data, choices, model):\n",
-    "#         self.data = data\n",
-    "#         self.choices = choices\n",
-    "#         self.model = model\n",
-    "#         self.process_sentences()\n",
-    "#         self.tokenizer = AutoTokenizer.from_pretrained(model)\n",
-    "#         self.sent_encodings, self.word_encodings, self.mask_idxs = self.make_encodings() #store the encodings\n",
-    "#         self.model = AutoModelForMaskedLM.from_pretrained(model)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 73,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "choices = {'bias':1, 'unbiased':2,'unrelated':3} \n",
-    "file_path = 'male_refugee_inter.csv' #\"drive/MyDrive/Final_templates.csv\"#\"drive/MyDrive/New_templates.csv\"\n",
-    "model_name = 'distilroberta-base'\n",
-    "templates = pd.read_csv(file_path, sep=\";\")\n",
-    "#evaluator = IntersentenceEvaluator(templates.copy(), choices, model_name)\n",
-    "#evaluator.run_model_and_evaluate()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 364,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Some weights of the model checkpoint at bert-base-uncased were not used when initializing BertForNextSentencePrediction: ['cls.predictions.transform.dense.weight', 'cls.predictions.transform.LayerNorm.bias', 'cls.predictions.transform.LayerNorm.weight', 'cls.predictions.bias', 'cls.predictions.decoder.weight', 'cls.predictions.transform.dense.bias']\n",
+      "Some weights of the model checkpoint at bert-base-uncased were not used when initializing BertForNextSentencePrediction: ['cls.predictions.transform.LayerNorm.weight', 'cls.predictions.transform.dense.bias', 'cls.predictions.bias', 'cls.predictions.transform.LayerNorm.bias', 'cls.predictions.transform.dense.weight', 'cls.predictions.decoder.weight']\n",
       "- This IS expected if you are initializing BertForNextSentencePrediction from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
       "- This IS NOT expected if you are initializing BertForNextSentencePrediction from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n"
-     ]
-    }
-   ],
-   "source": [
-    "model_name = 'distilroberta-base'\n",
-    "\n",
-    "tokenizer = BertTokenizer.from_pretrained('bert-base-uncased')\n",
-    "model = BertForNextSentencePrediction.from_pretrained('bert-base-uncased')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 75,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/mae/opt/miniconda3/lib/python3.9/site-packages/transformers/models/bert/modeling_bert.py:1457: FutureWarning: The `next_sentence_label` argument is deprecated and will be removed in a future version, use `labels` instead.\n",
-      "  warnings.warn(\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "logits\n"
+      "probs: tensor([[0.0132, 1.2556]], grad_fn=<AddmmBackward0>)\n",
+      "probs: 0.224013090133667\n"
      ]
     }
    ],
    "source": [
-    "first_sent = \"Modern pizza was invented in Naples, and the dish and its variants have since become popular in many countries.\"\n",
-    "next_sent = \"It has become one of the most popular foods in the world\"\n",
+    "tokenizer = BertTokenizer.from_pretrained(\"bert-base-uncased\")\n",
+    "model = BertForNextSentencePrediction.from_pretrained(\"bert-base-uncased\")\n",
     "\n",
-    "encoding = tokenizer(first_sent, next_sent, return_tensors='pt', max_length=512, truncation = True, padding = 'max_length')\n",
+    "#prompt = \"In Italy, pizza served in formal settings, such as at a restaurant, is presented unsliced.\"\n",
+    "prompt = \"As a male refugee\"\n",
+    "#next_sentence = \"The sky is blue due to the shorter wavelength of blue light.\"\n",
+    "#next_sentence = \"That's why I love Italy\"\n",
+    "#next_sentence = \"London is my favourite city\"\n",
+    "next_sentence = \"That's why I love Italy\"\n",
+    "encoding = tokenizer(prompt, next_sentence, return_tensors=\"pt\")\n",
     "\n",
-    "loss, logits = model(**encoding, next_sentence_label=torch.LongTensor([1]))\n",
+    "outputs = model(**encoding, labels=torch.LongTensor([1]))\n",
+    "logits = outputs.logits\n",
+    "#assert logits[0, 0] < logits[0, 1]  # next sentence was random\n",
+    "print(f\"probs: {logits}\")\n",
     "\n",
-    "print(logits)"
+    "#convert logit to probabilities \n",
+    "probs = softmax(logits, dim=1)\n",
+    "print(f\"probs: {probs[0][0]}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 365,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class IntersentenceEvaluator():\n",
+    "    def __init__(self, data, choices, model):\n",
+    "        self.data = data\n",
+    "        self.choices = choices\n",
+    "        self.model = model\n",
+    "        self.tokenizer = BertTokenizer.from_pretrained(model)\n",
+    "        self.model = BertForNextSentencePrediction.from_pretrained(model)\n",
+    "        self.encodings = self.make_encodings()\n",
+    "    \n",
+    "    #Function to make predictions and calculate how often the biased sentences are chosen\n",
+    "    def run_model_and_evaluate(self):\n",
+    "        output = self.make_predictions()\n",
+    "        self.get_bias(output)\n",
+    "        \n",
+    "    def make_encodings(self):\n",
+    "        sent_encoding = []\n",
+    "        for index,row in self.data.iterrows():\n",
+    "            _sent_encoding = []\n",
+    "            #print(f\"index: {index}\")\n",
+    "            #print(f\"row: {row}\")\n",
+    "            for c in self.choices.keys():\n",
+    "                encoding = self.tokenizer(row.loc['sentence'], row.loc[c], return_tensors=\"pt\")\n",
+    "                #print(f\"row.loc['sentence']: {row.loc['sentence']}\")\n",
+    "                #print(f\"row.loc[c]: {row.loc[c]}\")\n",
+    "                _sent_encoding.append(encoding)\n",
+    "            #print(f\"_sent_encoding: {_sent_encoding}\")\n",
+    "            sent_encoding.append(_sent_encoding)\n",
+    "        #print(f\"sent_encoding: {sent_encoding}\")\n",
+    "        return sent_encoding\n",
+    "    \n",
+    "    def make_predictions(self):\n",
+    "        output = []\n",
+    "        for idx, (enum) in enumerate(self.encodings):\n",
+    "            predictions = []\n",
+    "            #print(f\"idx: {idx}\")\n",
+    "            for q_idx,sing_enum in enumerate(enum):\n",
+    "                #print(f\"idx: {idx}\")\n",
+    "                #print(f\"sing_enum: {sing_enum}\")\n",
+    "                _logits = self.model(**sing_enum, labels=torch.LongTensor([1])).logits\n",
+    "                _predictions = softmax(_logits, dim=1)[0][0]\n",
+    "                #print(f\"q_idx: {q_idx}\")\n",
+    "                #print(f\"_predictions: {_predictions}\")\n",
+    "                predictions.append(_predictions.item())\n",
+    "                #print(f\"predictions: {predictions}\")\n",
+    "            output.append(np.argmax(predictions) + 1)\n",
+    "            #print(f\"output: {output}\")\n",
+    "        return output\n",
+    "    \n",
+    "    def get_bias(self,predictions):\n",
+    "        #print(f\"predictions: {predictions}\")\n",
+    "        biased, unbiased, unrelated = 0, 0, 0\n",
+    "        for pred in predictions:\n",
+    "            if pred == 1:\n",
+    "                biased +=1\n",
+    "            if pred == 2:\n",
+    "                unbiased += 1\n",
+    "            if pred == 3:\n",
+    "                unrelated += 1\n",
+    "        print(f\"biased: {biased}\")\n",
+    "        print(f\"unbiased: {unbiased}\")\n",
+    "        print(f\"unrelated: {unrelated}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 366,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'str' object has no attribute 'softmax'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[76], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39m#convert logit to probabilities \u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m probs \u001b[39m=\u001b[39m softmax(logits, dim\u001b[39m=\u001b[39;49m\u001b[39m1\u001b[39;49m)\n\u001b[1;32m      3\u001b[0m probs\n",
-      "File \u001b[0;32m~/opt/miniconda3/lib/python3.9/site-packages/torch/nn/functional.py:1841\u001b[0m, in \u001b[0;36msoftmax\u001b[0;34m(input, dim, _stacklevel, dtype)\u001b[0m\n\u001b[1;32m   1839\u001b[0m     dim \u001b[39m=\u001b[39m _get_softmax_dim(\u001b[39m\"\u001b[39m\u001b[39msoftmax\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39minput\u001b[39m\u001b[39m.\u001b[39mdim(), _stacklevel)\n\u001b[1;32m   1840\u001b[0m \u001b[39mif\u001b[39;00m dtype \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[0;32m-> 1841\u001b[0m     ret \u001b[39m=\u001b[39m \u001b[39minput\u001b[39;49m\u001b[39m.\u001b[39;49msoftmax(dim)\n\u001b[1;32m   1842\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m   1843\u001b[0m     ret \u001b[39m=\u001b[39m \u001b[39minput\u001b[39m\u001b[39m.\u001b[39msoftmax(dim, dtype\u001b[39m=\u001b[39mdtype)\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'str' object has no attribute 'softmax'"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Some weights of the model checkpoint at bert-base-uncased were not used when initializing BertForNextSentencePrediction: ['cls.predictions.transform.LayerNorm.weight', 'cls.predictions.transform.dense.bias', 'cls.predictions.bias', 'cls.predictions.transform.LayerNorm.bias', 'cls.predictions.transform.dense.weight', 'cls.predictions.decoder.weight']\n",
+      "- This IS expected if you are initializing BertForNextSentencePrediction from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
+      "- This IS NOT expected if you are initializing BertForNextSentencePrediction from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "predictions: [2, 2, 1, 1]\n",
+      "biased: 2\n",
+      "unbiased: 2\n",
+      "unrelated: 0\n"
      ]
     }
    ],
    "source": [
-    "#convert logit to probabilities \n",
-    "probs = softmax(logits, dim=1)\n",
-    "probs"
+    "choices = {'bias':1, 'unbiased':2,'unrelated':3} \n",
+    "file_path = 'male_refugee_inter.csv' #\"drive/MyDrive/Final_templates.csv\"#\"drive/MyDrive/New_templates.csv\"\n",
+    "model_name = \"bert-base-uncased\"\n",
+    "templates = pd.read_csv(file_path, sep=\";\")\n",
+    "evaluate = IntersentenceEvaluator(templates.copy(), choices, model_name)\n",
+    "evaluate.run_model_and_evaluate()\n"
    ]
   }
  ],
