--- a/Intrasentence.ipynb
+++ b/Intrasentence.ipynb
@@ -153,6 +153,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[2, 1, 1, 1, 1, 1, 2, 1, 1, 1, 2, 2, 2, 1, 1, 1, 1, 1, 1]\n",
       "biased: 14\n",
       "unbiased: 5\n",
       "unrelated: 0\n"
@@ -185,7 +186,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12 (main, Apr  5 2022, 01:52:34) \n[Clang 12.0.0 ]"
+   "version": "3.9.12"
   },
   "orig_nbformat": 4,
   "vscode": {
